Reorder columns on mobile to prevent a negative Y weird bug

--- a/src/containers/app/App.scss
+++ b/src/containers/app/App.scss
@@ -13,7 +13,7 @@
     height: calc(100vh);
     background-color: $white;
 
-    @media (max-width: 767px) {
+    @media (max-width: 991px) {
       height: auto;
     }
   }
